--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,6 +5,9 @@ backend:
 media_folder: "static" # Media files will be stored in the repo under static
 public_folder: "/" # The src attribute for uploaded media will begin with /
 
+publish_mode: editorial_workflow
+local_backend: true
+
 collections:
 - name: "vinyl" # Used in routes, e.g., /admin/collections/blog
   label: "Vinyl" # Used in the UI
