--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"format": "prettier --write --plugin-search-dir=. .",
+		"cms": "npx netlify-cms-proxy-server"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-netlify": "^1.0.0-next.20",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/typography": "^0.4.1",
 		"autoprefixer": "^10.2.6",
 		"carbon-icons-svelte": "^10.35.0",
 		"cssnano": "^5.0.6",
