--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,17 @@ collections:
     - {label: "Layout", name: "layout", widget: "hidden", default: "vinyl"}
     - {label: "Title", name: "title", widget: "string"}
     - {label: "Artist", name: "artist", widget: "string"}
-    - {label: "Publish Date", name: "date", widget: "datetime"}
     - {label: "Cover Image", name: "cover", widget: "image"}
-    - {label: "Rating (scale of 1-10)", name: "rating", widget: "number"}
+    - {label: "Rating (scale of 1-10)", name: "rating", widget: "number", required: false}
+    - {label: "Body", name: "body", widget: "markdown", required: false}
+- name: "blog" # Used in routes, e.g., /admin/collections/blog
+  label: "Blog post" # Used in the UI
+  folder: "src/routes/post" # The path to the folder where the documents are stored
+  create: true # Allow users to create new documents in this collection
+  slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+  fields: # The fields for each document, usually in front matter
+    - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
+    - {label: "Title", name: "title", widget: "string"}
+    - {label: "Publish Date", name: "date", widget: "datetime", format: 'Do-MMM-YYYY'}
+    - {label: "Thumbnail", name: "thumbnail", widget: "image"}
     - {label: "Body", name: "body", widget: "markdown"}
